move/Pci_8164.BAS


Declare Function B_8164_set_sa_move_all Lib "8164.dll" Alias "_8164_set_sa_move_all" (ByVal TotalAx As Integer, AxisArray As Integer, PosA As Double, StrVelA As Double, MaxVelA As Double, TaccA As Double, TdecA As Double, SVaccA As Double, SVdecA As Double) As Integer
Declare Function B_8164_set_ta_move_all Lib "8164.dll" Alias "_8164_set_ta_move_all" (ByVal TotalAx As Integer, AxisArray As Integer, PosA As Double, StrVelA As Double, MaxVelA As Double, TaccA As Double, TdecA As Double) As Integer
Declare Function B_8164_set_sr_move_all Lib "8164.dll" Alias "_8164_set_sr_move_all" (ByVal TotalAx As Integer, AxisArray As Integer, DistA As Double, StrVelA As Double, MaxVelA As Double, TaccA As Double, TdecA As Double, SVaccA As Double, SVdecA As Double) As Integer
Declare Function B_8164_set_latch_source Lib "8164.dll" Alias "_8164_set_latch_source" (ByVal AxisNo As Integer, ByVal ltc_src As Integer) As Integer
Declare Function B_8164_set_inp Lib "8164.dll" Alias "_8164_set_inp" (ByVal AxisNo As Integer, ByVal inp_enable As Integer, ByVal inp_logic As Integer) As Integer
Declare Function B_8164_set_idle_pulse Lib "8164.dll" Alias "_8164_set_idle_pulse" (ByVal AxisNo As Integer, ByVal idl_pulse As Integer) As Integer
Declare Function B_8164_delay_time Lib "8164.dll" Alias "_8164_delay_time" (ByVal AxisNo As Integer, ByVal miniSecond As Double) As Integer
Declare Function B_8164_set_pulser_ratio Lib "8164.dll" Alias "_8164_set_pulser_ratio" (ByVal AxisNo As Integer, ByVal PDV As Integer, ByVal PMG As Integer) As Integer
Declare Function B_8164_pulser_r_line2 Lib "8164.dll" Alias "_8164_pulser_r_line2" (ByVal CardNo As Integer, AxisArray As Integer, ByVal DistX As Double, ByVal DistY As Double, ByVal SpeedLimit As Double) As Integer
Declare Function B_8164_pulser_r_arc2 Lib "8164.dll" Alias "_8164_pulser_r_arc2" (ByVal CardNo As Integer, AxisArray As Integer, ByVal OffsetCx As Double, ByVal OffsetCy As Double, ByVal OffsetEx As Double, ByVal OffsetEy As Double, ByVal DIR As Integer, ByVal MaxVel As Double) As Integer
Declare Function B_8164_pulser_a_line2 Lib "8164.dll" Alias "_8164_pulser_a_line2" (ByVal CardNo As Integer, AxisArray As Integer, ByVal PosX As Integer, ByVal PosY As Integer, ByVal SpeedLimit As Integer) As Integer
Declare Function B_8164_pulser_a_arc2 Lib "8164.dll" Alias "_8164_pulser_a_arc2" (ByVal CardNo As Integer, AxisArray As Integer, ByVal Cx As Double, ByVal Cy As Double, ByVal Ex As Double, ByVal Ey As Double, ByVal DIR As Integer, ByVal MaxVel As Double) As Double

Declare Function B_8164_escape_home Lib "8164.dll" Alias "_8164_escape_home" (ByVal AxisNo As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double) As Integer
Declare Function B_8164_home_search Lib "8164.dll" Alias "_8164_home_search" (ByVal AxisNo As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal ORGOffset As Double) As Integer
Declare Function B_8164_set_line_move_mode Lib "8164.dll" Alias "_8164_set_line_move_mode" (ByVal AxisNo As Integer, ByVal mode As Integer) As Integer

Declare Function B_8164_verify_speed Lib "8164.dll" Alias "_8164_verify_speed" (ByVal StrVel As Double, ByVal MaxVel As Double, minAccT As Double, maxAccT As Double, ByVal MaxSpeed As Double) As Double

Declare Function B_8164_start_tr_arc_xyu Lib "8164.dll" Alias "_8164_start_tr_arc_xyu" (ByVal CardNo As Integer, ByVal OffsetCx As Double, ByVal OffsetCy As Double, ByVal OffsetEx As Double, ByVal OffsetEy As Double, ByVal DIR As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double) As Integer
Declare Function B_8164_start_ta_arc_xyu Lib "8164.dll" Alias "_8164_start_ta_arc_xyu" (ByVal CardNo As Integer, ByVal Cx As Double, ByVal Cy As Double, ByVal Ex As Double, ByVal Ey As Double, ByVal DIR As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double) As Integer
Declare Function B_8164_start_sr_arc_xyu Lib "8164.dll" Alias "_8164_start_sr_arc_xyu" (ByVal CardNo As Integer, ByVal OffsetCx As Double, ByVal OffsetCy As Double, ByVal OffsetEx As Double, ByVal OffsetEy As Double, ByVal DIR As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double) As Integer
Declare Function B_8164_start_sa_arc_xyu Lib "8164.dll" Alias "_8164_start_sa_arc_xyu" (ByVal CardNo As Integer, ByVal Cx As Double, ByVal Cy As Double, ByVal Ex As Double, ByVal Ey As Double, ByVal DIR As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal SVacc As Double) As Integer
Declare Function B_8164_start_tr_arc_yzu Lib "8164.dll" Alias "_8164_start_tr_arc_yzu" (ByVal CardNo As Integer, ByVal OffsetCx As Double, ByVal OffsetCy As Double, ByVal OffsetEx As Double, ByVal OffsetEy As Double, ByVal DIR As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double) As Integer
Declare Function B_8164_start_ta_arc_yzu Lib "8164.dll" Alias "_8164_start_ta_arc_yzu" (ByVal CardNo As Integer, ByVal Cx As Double, ByVal Cy As Double, ByVal Ex As Double, ByVal Ey As Double, ByVal DIR As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double) As Integer
Declare Function B_8164_start_sr_arc_yzu Lib "8164.dll" Alias "_8164_start_sr_arc_yzu" (ByVal CardNo As Integer, ByVal OffsetCx As Double, ByVal OffsetCy As Double, ByVal OffsetEx As Double, ByVal OffsetEy As Double, ByVal DIR As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double) As Integer
Declare Function B_8164_start_sa_arc_yzu Lib "8164.dll" Alias "_8164_start_sa_arc_yzu" (ByVal CardNo As Integer, ByVal Cx As Double, ByVal Cy As Double, ByVal Ex As Double, ByVal Ey As Double, ByVal DIR As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal SVacc As Double) As Integer

Declare Function B_8164_start_tr_arc2 Lib "8164.dll" Alias "_8164_start_tr_arc2" (ByVal CardNo As Integer, AxisArray As Integer, ByVal OffsetCx As Double, ByVal OffsetCy As Double, ByVal OffsetEx As Double, ByVal OffsetEy As Double, ByVal DIR As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function B_8164_start_ta_arc2 Lib "8164.dll" Alias "_8164_start_ta_arc2" (ByVal CardNo As Integer, AxisArray As Integer, ByVal Cx As Double, ByVal Cy As Double, ByVal Ex As Double, ByVal Ey As Double, ByVal DIR As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function B_8164_start_sr_arc2 Lib "8164.dll" Alias "_8164_start_sr_arc2" (ByVal CardNo As Integer, AxisArray As Integer, ByVal OffsetCx As Double, ByVal OffsetCy As Double, ByVal OffsetEx As Double, ByVal OffsetEy As Double, ByVal DIR As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
Declare Function B_8164_start_sa_arc2 Lib "8164.dll" Alias "_8164_start_sa_arc2" (ByVal CardNo As Integer, AxisArray As Integer, ByVal Cx As Double, ByVal Cy As Double, ByVal Ex As Double, ByVal Ey As Double, ByVal DIR As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer

Declare Function B_8164_start_tr_arc_xy Lib "8164.dll" Alias "_8164_start_tr_arc_xy" (ByVal CardNo As Integer, ByVal OffsetCx As Double, ByVal OffsetCy As Double, ByVal OffsetEx As Double, ByVal OffsetEy As Double, ByVal DIR As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function B_8164_start_ta_arc_xy Lib "8164.dll" Alias "_8164_start_ta_arc_xy" (ByVal CardNo As Integer, ByVal Cx As Double, ByVal Cy As Double, ByVal Ex As Double, ByVal Ey As Double, ByVal DIR As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function B_8164_start_tr_arc_zu Lib "8164.dll" Alias "_8164_start_tr_arc_zu" (ByVal CardNo As Integer, ByVal OffsetCx As Double, ByVal OffsetCy As Double, ByVal OffsetEx As Double, ByVal OffsetEy As Double, ByVal DIR As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function B_8164_start_ta_arc_zu Lib "8164.dll" Alias "_8164_start_ta_arc_zu" (ByVal CardNo As Integer, ByVal Cx As Double, ByVal Cy As Double, ByVal Ex As Double, ByVal Ey As Double, ByVal DIR As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer

Declare Function B_8164_start_sr_arc_xy Lib "8164.dll" Alias "_8164_start_sr_arc_xy" (ByVal CardNo As Integer, ByVal OffsetCx As Double, ByVal OffsetCy As Double, ByVal OffsetEx As Double, ByVal OffsetEy As Double, ByVal DIR As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
Declare Function B_8164_start_sa_arc_xy Lib "8164.dll" Alias "_8164_start_sa_arc_xy" (ByVal CardNo As Integer, ByVal Cx As Double, ByVal Cy As Double, ByVal Ex As Double, ByVal Ey As Double, ByVal DIR As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
Declare Function B_8164_start_sr_arc_zu Lib "8164.dll" Alias "_8164_start_sr_arc_zu" (ByVal CardNo As Integer, ByVal OffsetCx As Double, ByVal OffsetCy As Double, ByVal OffsetEx As Double, ByVal OffsetEy As Double, ByVal DIR As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
Declare Function B_8164_start_sa_arc_zu Lib "8164.dll" Alias "_8164_start_sa_arc_zu" (ByVal CardNo As Integer, ByVal Cx As Double, ByVal Cy As Double, ByVal Ex As Double, ByVal Ey As Double, ByVal DIR As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer

Declare Function B_8164_set_sync_option Lib "8164.dll" Alias "_8164_set_sync_option" (ByVal AxisNo As Integer, ByVal sync_stop_on As Integer, ByVal cstop_output_on As Integer, ByVal sync_option1 As Integer, ByVal sync_option2 As Integer) As Integer
Declare Function B_8164_mask_axis_stop_int Lib "8164.dll" Alias "_8164_mask_axis_stop_int" (ByVal AxisNo As Integer, ByVal int_disable As Integer) As Integer
Declare Function B_8164_set_axis_option Lib "8164.dll" Alias "_8164_set_axis_option" (ByVal AxisNo As Integer, ByVal option1 As Integer) As Integer
Declare Function B_8164_set_axis_stop_int Lib "8164.dll" Alias "_8164_set_axis_stop_int" (ByVal AxisNo As Integer, ByVal axis_stop_int As Integer) As Integer
Declare Function B_8164_version_info Lib "8164.dll" Alias "_8164_version_info" (ByVal CardNo As Integer, HardwareInfo As Integer, SoftwareInfo As Integer, DriverInfo As Integer) As Integer
Declare Function B_8164_set_sync_stop_mode Lib "8164.dll" Alias "_8164_set_sync_stop_mode" (ByVal AxisNo As Integer, ByVal stop_mode As Integer) As Integer

Declare Function B_8164_set_sync_signal_source Lib "8164.dll" Alias "_8164_set_sync_signal_source" (ByVal AxisNo As Integer, ByVal sync_axis As Integer) As Integer
Declare Function B_8164_set_sync_signal_mode Lib "8164.dll" Alias "_8164_set_sync_signal_mode" (ByVal AxisNo As Integer, ByVal mode As Integer) As Integer
Declare Function B_8164_start_ta_pickplace Lib "8164.dll" Alias "_8164_start_ta_pickplace" (AxisPair2 As Integer, Pos3 As Double, SVel3 As Double, MVel3 As Double, AccT3 As Double, StartPoint2 As Double) As Integer

Declare Function B_8164_set_auto_rdp Lib "8164.dll" Alias "_8164_set_auto_rdp" (ByVal CardNo As Integer, ByVal on_off As Integer) As Integer
